corrección css carrusel

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -376,27 +376,37 @@
     <div class="row container mx-auto my-5">
       <div class="col">
         <div class="card sombra">
-          <img src="./img/marcas/marca-1.jpg" class="img-fluid img-marca p-3" alt="">
+          <a href="https://www.eucerin.com.ar/" target="_blank">
+            <img src="./img/marcas/marca-1.jpg" class="img-fluid img-marca p-3" alt="marca eucerin">
+          </a>
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="./img/marcas/marca-2.jpg" class="img-fluid img-marca p-3" alt="">
+          <a href="https://www.maybelline.com.ar/" target="_blank">
+            <img src="./img/marcas/marca-2.jpg" class="img-fluid img-marca p-3" alt="marca maybelline">
+          </a>
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="./img/marcas/marca-3.jpg" class="img-fluid img-marca p-3" alt="">
+          <a href="https://www.isdin.com/es-AR/" target="_blank">
+            <img src="./img/marcas/marca-3.jpg" class="img-fluid img-marca p-3" alt="marca isdin">
+          </a>
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="./img/marcas/marca-4.jpg" class="img-fluid img-marca p-3" alt="">
+          <a href="https://www.laroche-posay.com.ar/" target="_blank">
+            <img src="./img/marcas/marca-4.jpg" class="img-fluid img-marca p-3" alt="marca laroche">
+          </a>
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="./img/marcas/marca-5.jpg" class="img-fluid img-marca p-3" alt="">
+          <a href="https://www.veet.com.ar/" target="_blank">
+            <img src="./img/marcas/marca-5.jpg" class="img-fluid img-marca p-3" alt="marca veet">
+          </a>
         </div>
       </div>
     </div>
@@ -496,8 +506,7 @@
             <div class="card-sucursal">
               <h1 class="text-light">Mosconi</h1>
               <h3 class="text-light">Av. J. Artigas 4702, CABA</h3>
-              <h4 class="border-white pt-2 font-weight-light text-light horarios"
-                style="border-top: 3px solid white;">
+              <h4 class="border-white pt-2 font-weight-light text-light horarios" style="border-top: 3px solid white;">
                 Lunes a Viernes de
                 8 a
                 22 hs.</h4>
@@ -515,8 +524,7 @@
             <div class="card-sucursal">
               <h1 class="text-light">Griveo</h1>
               <h3 class="text-light">Av. J. Artigas 4901, CABA</h3>
-              <h4 class="border-white pt-2 font-weight-light text-light horarios"
-                style="border-top: 3px solid white;">
+              <h4 class="border-white pt-2 font-weight-light text-light horarios" style="border-top: 3px solid white;">
                 Lunes a Viernes de
                 8:30 a
                 20 hs.</h4>
