responsive changes for fenix

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -290,7 +290,7 @@
           </a>
         </h3>
       </div>
-      <div class="col-12 col-lg-5 p-0 px-1">
+      <div class="d-none d-lg-block col-lg-5 p-0 px-1">
         <img src="./img/delivery.png" class="img-fluid img-delivery" alt="">
       </div>
     </div>
@@ -309,58 +309,56 @@
             class="fa fa-long-arrow-alt-right pl-1"></i></a></h5>
     </div>
     <div class="row m-5">
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-1.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-2.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-3.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-4.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-    </div>
-    <div class="row m-5">
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-5.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-6.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-7.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-6">
         <div class="card border-0 m-2">
           <div class="card-productos sombra">
             <img src="./img/promociones/promo-8.png" class="img-fluid p-4" alt="producto 1">
@@ -374,35 +372,42 @@
   <section id="marcas" class="bg-farma">
     <h4 class="text-white px-5">MARCAS DESTACADAS</h4>
     <div class="row container mx-auto my-5">
-      <div class="col">
+      <div class="col-md col-sm-6 col-6 p-3">
         <div class="card sombra">
           <a href="https://www.eucerin.com.ar/" target="_blank">
             <img src="./img/marcas/marca-1.jpg" class="img-fluid img-marca p-3" alt="marca eucerin">
           </a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-md col-sm-6 col-6 p-3">
         <div class="card sombra">
           <a href="https://www.maybelline.com.ar/" target="_blank">
             <img src="./img/marcas/marca-2.jpg" class="img-fluid img-marca p-3" alt="marca maybelline">
           </a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-md col-sm-6 col-6 p-3">
         <div class="card sombra">
           <a href="https://www.isdin.com/es-AR/" target="_blank">
             <img src="./img/marcas/marca-3.jpg" class="img-fluid img-marca p-3" alt="marca isdin">
           </a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-md col-sm-6 col-6 p-3">
         <div class="card sombra">
           <a href="https://www.laroche-posay.com.ar/" target="_blank">
             <img src="./img/marcas/marca-4.jpg" class="img-fluid img-marca p-3" alt="marca laroche">
           </a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-md col-sm-6 col-6 p-3">
+        <div class="card sombra">
+          <a href="https://www.veet.com.ar/" target="_blank">
+            <img src="./img/marcas/marca-5.jpg" class="img-fluid img-marca p-3" alt="marca veet">
+          </a>
+        </div>
+      </div>
+      <div class="d-md-none col-sm-6 col-6 p-3">
         <div class="card sombra">
           <a href="https://www.veet.com.ar/" target="_blank">
             <img src="./img/marcas/marca-5.jpg" class="img-fluid img-marca p-3" alt="marca veet">
@@ -415,7 +420,7 @@
   <!-- covid-19 -->
   <section id="covid">
     <div class="row">
-      <div class=" col-6 p-4">
+      <div class="col-lg-6 col p-5">
         <h3 class="btn btn-gris btn-lg">COVID-19</h3>
         <h1>Tips para cuidarnos</h1>
         <p class="font-weight-bolder my-4">¡En Nueva Social Fénix nos cuidamos entre todos!</p>
@@ -427,7 +432,7 @@
         </p>
         <h2>Cuidados</h2>
       </div>
-      <div class="col-6">
+      <div class="d-none d-lg-block col-6">
         <img src="./img/covid/covid.png" alt="imagen salir de casa con tapabocas" class="img-tapabocas">
       </div>
       <div class="container-fluid">
@@ -468,14 +473,14 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center mt-4 px-5">
-        <div class="col-7">
+      <div class="row justify-content-center mt-4 px-4">
+        <div class="col-lg-9 col-md-8 col-sm-7 px-5 mb-3">
           <h5 class="mt-4">Si tenés alguno de estos síntomas o en contacto con
             algún caso confirmado <b>no te automediques y consultá
               inmediatamente al sistema de salud.</b></h5>
         </div>
-        <div class="col-5">
-          <img src="./img/covid/ministerio.jpg" alt="ministerio de salud" class="img-fluid float-right w-50 mt-4">
+        <div class="d-none d-sm-block col-lg-3 col-md-4 col-sm-5">
+          <img src="./img/covid/ministerio.jpg" alt="ministerio de salud" class="img-fluid float-right w-100 h-100">
         </div>
         <a href="tel:08002221002" class="btn bg-danger btn-block btn-lg p-1 m-3" id="tel-covid">
           <h4 class="d-inline-block text-white p-4 mb-0">
@@ -500,7 +505,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col mx-2">
+        <div class="col-sm-12 col-md-6">
           <a href="#" class="sucursal">
             <img src="./img/suc-mosconi.png" class="img-fluid sombra-2" alt="">
             <div class="card-sucursal">
@@ -518,7 +523,7 @@
             <span class="h4 text-light pl-2"><u>Ver Mapa</u></span>
           </a>
         </div>
-        <div class="col mx-2">
+        <div class="col-sm-12 col-md-6">
           <a href="#" class="sucursal">
             <img src="./img/suc-griveo.png" class="img-fluid sombra-2" alt="">
             <div class="card-sucursal">
@@ -634,7 +639,7 @@
   </section>
   <!-- /ubicacion -->
   <!-- consulta -->
-  <section id="consultanos" class="bg-farma pt-5" style="z-index: 1; position: relative;">
+  <section id="consultanos" class="bg-farma pt-5">
     <div class="row">
       <div class="col-12 col-lg-6 text-right">
         <h4 class="text-white mb-0">SI TENÉS ALGUNA CONSULTA</h4>
@@ -648,14 +653,14 @@
   <!-- /consulta -->
   <!-- footer -->
   <footer>
-    <section id="footer" class="bg-secondary pb-4" style="position: relative;">
+    <section id="footer" class="bg-secondary pb-3" style="position: relative;">
       <div class="row p-0">
         <div class="col-4">
           <div class="label label-2 bg-light p-3">
             <img src="./img/logo-fenix.png" class="img-fluid" alt="">
           </div>
         </div>
-        <div class="row col-8 mt-n5 p-0">
+        <div class="row d-none d-sm-flex col-8 mt-n5 p-0">
           <div class="col-3">
             <ul class="p-0">
               <li class="nav-item">
@@ -711,6 +716,21 @@
           </div>
         </div>
       </div>
+      <div class="col-12 d-sm-none px-5 mb-5">
+        <p class="text-light mb-0">
+          SUCURSALES:
+        </p>
+        <p class="text-light font-weight-normal mb-0">
+          <span class="font-weight-bold">Mosconi</span> / Gral. José Gervasio Artigas 4702
+          <br>
+          0800-666-1234
+        </p>
+        <p class="text-light font-weight-normal mb-0">
+          <span class="font-weight-bold">Griveo</span> / Gral. José Gervasio Artigas 4901
+          <br>
+          0800-666-5678
+        </p>
+      </div>
       <div class="px-5">
         <a href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
             class="fab fa-instagram-square text-light fa-2x"></i></a>
@@ -722,12 +742,53 @@
           NUESTRAS REDES
         </p>
         <p class="text-light font-weight-normal pr-5">
-          © Copyright 2019. Todos los derechos reservados | Profasan sociedad anonima, Cuit 30708995904. Dirección
-          fiscal Artigas 4901, CABA
-          <a href="#" class="float-right">
+          © Copyright 2019. Todos los derechos reservados | Profasan sociedad anonima, Cuit 30708995904.
+          <br> Dirección fiscal Artigas 4901, CABA
+          <a href="#" class="float-right mt-auto">
             <img src="./img/data-fiscal.jpg" alt="data fiscal" class="dataf">
           </a>
         </p>
+      </div>
+      <div class="d-sm-none text-center row">
+        <div class="text-center mx-auto" id="mapa-sitio">
+          <a class="btn bg-transparent" data-toggle="collapse" href="#sitemap" role="button" aria-expanded="false" aria-controls="sitemap">
+              <i class="fas fa-globe pr-2" aria-hidden="true"></i>MAPA DEL SITIO<i class="pl-2 fas fa-angle-double-down" aria-hidden="true"></i>
+          </a>
+          <div class="collapse text-center pt-5" id="sitemap">
+            <h3 class="text-white">Sitemap Nueva Social Fenix</h3>
+            <ul class="p-0">
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#productos"> PRODUCTOS</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#envios"> ENVÍOS</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#promociones">
+                  PROMOCIONES</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#covid"> COVID-19</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#sucursales">
+                  SUCURSALES</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#conocenos">
+                  CONOCENOS</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#contactanos">
+                  CONTACTO</a>
+              </li>
+              <li class="nav-item btn-lg mb-1 btn-outline-dark border">
+                <a class="nav-link p-1 text-light" href="#ubicacion">
+                  UBICACIÓN</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
   </footer>
