--- a/LeaniM/proveedores.html
+++ b/LeaniM/proveedores.html
@@ -184,7 +184,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1 class="m-0 text-dark">Productos Proveedores</h1>
+              <h1 class="m-0 text-dark">Proveedores</h1>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container-fluid -->
@@ -196,7 +196,27 @@
         <div class="container-fluid">
           <!-- row -->
           <div class="row">
-            <div class="col-12">
+            <div class="col-lg-3 col-md-6 col-12">
+              <div class="small-box">
+                <a href="#" class="d-block p-2 bg-success">
+                  <div class="inner">
+                    <h3>Alta Proveedor</h3>
+                    <p>Agregar Proveedor</p>
+                  </div>
+                  <div class="icon"><i class="ion ion-bag"></i></div>
+                </a>
+              </div>
+              <div class="small-box">
+                <a href="#" class="d-block p-2 bg-info" data-toggle="modal" data-target="#modalPagos">
+                  <div class="inner">
+                    <h3>Alta Productos</h3>
+                    <p>Incorpore productos</p>
+                  </div>
+                  <div class="icon"><i class="ion ion-cash"></i></div>
+                </a>
+              </div>
+            </div>
+            <div class="col-9">
               <div class="card">
                 <div class="card-header">
                   <div class="input-group float-left" style="width: 275px;">
