--- a/LeaniM/proveedoresNP.html
+++ b/LeaniM/proveedoresNP.html
@@ -213,21 +213,21 @@
                 <div class="card-body">
                   <form role="form">
                     <div class="row">
-                      <div class="col-sm-4">
+                      <div class="col-sm-3">
                         <!-- text input -->
                         <div class="form-group">
                           <label>Proveedor</label>
                           <input type="text" class="form-control" placeholder="Ingrese nombre del proveedor ..." required>
                         </div>
                       </div>
-                      <div class="col-sm-4">
+                      <div class="col-sm-3">
                         <!-- text input -->
                         <div class="form-group">
                           <label>Razón Social</label>
                           <input type="text" class="form-control" value="Razón Social" readonly>
                         </div>
                       </div>
-                      <div class="col-sm-4">
+                      <div class="col-sm-3">
                         <!-- select -->
                         <div class="form-group">
                           <label>*Rubro</label>
@@ -238,6 +238,20 @@
                             <option>Rubro 4</option>
                             <option>Rubro 5</option>
                           </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-1">
+                        <!-- text input -->
+                        <div class="form-group">
+                          <label>N° Factura</label>
+                          <input type="text" class="form-control" value="0">
+                        </div>
+                      </div>
+                      <div class="col-sm-2">
+                        <!-- text input -->
+                        <div class="form-group">
+                          <label>Fecha Facturación</label>
+                          <input type="date" name="" value="" id="">
                         </div>
                       </div>
                     </div>
