--- a/LeaniM/panelClientes.html
+++ b/LeaniM/panelClientes.html
@@ -138,9 +138,9 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="./proveedoresNP.html" class="nav-link">
+                  <a href="./Compras.html" class="nav-link">
                     <i class="fa fa-users nav-icon"></i>
-                    <p>Proveedores NP</p>
+                    <p>Compras</p>
                   </a>
                 </li>
               </ul>
@@ -211,7 +211,7 @@
               <div class="info-box bg-primary">
                 <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
                 <div class="info-box-content">
-                  <span class="info-box-text">COMPRAS ACUMULADAS</span>
+                  <span class="info-box-text">Compras ACUMULADAS</span>
                   <span class="info-box-number"><span>135200</span> $</span>
                 </div>
                 <!-- /.info-box-content -->
