--- a/LeaniM/proveedores.html
+++ b/LeaniM/proveedores.html
@@ -138,9 +138,9 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="./proveedoresNP.html" class="nav-link">
+                  <a href="./Compras.html" class="nav-link">
                     <i class="fa fa-users nav-icon"></i>
-                    <p>Proveedores NP</p>
+                    <p>Compras</p>
                   </a>
                 </li>
               </ul>
