--- a/LeaniM/finanzas.html
+++ b/LeaniM/finanzas.html
@@ -44,7 +44,7 @@
           <a href="./" class="nav-link">Dashboard</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./precios.html" class="nav-link">Precios</a>
+          <a href="./precios.html" class="nav-link">Productos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
           <a href="./pagos.html" class="nav-link">Pagos</a>
@@ -148,7 +148,7 @@
             <li class="nav-item">
               <a href="./precios.html" class="nav-link">
                 <i class="fas fa-cash-register nav-icon"></i>
-                <p>Precios</p>
+                <p>Productos</p>
               </a>
             </li>
             <li class="nav-item">
