correct html name

--- a/LeaniM/altaClientes.html
+++ b/LeaniM/altaClientes.html
@@ -138,7 +138,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="./Compras.html" class="nav-link">
+                  <a href="./compras.html" class="nav-link">
                     <i class="fa fa-users nav-icon"></i>
                     <p>Compras</p>
                   </a>
