--- a/LeaniM/compras.html
+++ b/LeaniM/compras.html
@@ -135,7 +135,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="./Compras.html" class="nav-link active">
+              <a href="./compras.html" class="nav-link active">
                 <i class="fa fa-shopping-cart nav-icon"></i>
                 <p>Compras</p>
               </a>
